Removing overflow:hidden from modal.  Fixes #15

--- a/sass/modules/_global.scss
+++ b/sass/modules/_global.scss
@@ -141,6 +141,10 @@ img {
     max-width:100%;
 }
 
+.modal-open {
+    overflow: visible;
+}
+
 /* Debugging */
 
 // Grid overlay based on 32px (2rem * 16px base) line height.
